# openni2-recorder

./: AUTHORS.md  CMakeLists.txt  README.md  config.ini
src/: Tracker.cpp  recorder.cpp
